# google_cloud_speech

./: CMakeLists.txt  README.md  package.xml  requirements.txt
cfg/: Recognition.cfg
config/: service_key.json.required  vocaburary.yaml
launch/: bringup.launch
msg/: RecognizedWord.msg
src/: speech_node.py
