<?xml version="1.0"?>
<package format="2">
  <name>google_cloud_speech</name>
  <version>0.0.0</version>
  <description>The speech to text packge using google cloud speech</description>

  <author email="byeongkyu@gmail.com">Byeong-Kyu Ahn</author>
  <maintainer email="byeongkyu@gmail.com">Byeong-Kyu Ahn</maintainer>

  <license>BSD</license>
  <url type="website">https://github.com/mhri/mhri/wiki</url>
  <url type="repository">https://github.com/mhri/examples_sensory_perceptions.git</url>
  <url type="bugtracker">https://github.com/mhri/examples_sensory_perceptions/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <!--<depend>libportaudio-ocaml-dev</depend>-->
  <depend>message_generation</depend>
  <depend>std_msgs</depend>


  <export>
  </export>
</package>
